# Coding-tests

./: .gitignore  .gitmodules  Chaining_classes_within_a_Pipeline.cpp  Readme
C++/CRTP/: main_basic_crtp.cpp  main_basic_crtp.s  main_crtp_with_templated_function.cpp  main_crtp_with_templated_function.s  main_templates_only.cpp  main_templates_only.s
C++/C_C++ mixup/: Makefile  c_functions.c  c_functions.h  c_interface.cpp  c_interface.h  class.hpp  class_collection.cpp  class_collection.hpp  main.cpp
C++/ColoredConsole/: CMakeLists.txt  main.cpp
C++/Crashing/: crashing  crashing.cpp  launcher.sh
C++/DijkstraAlgorithm/: Makefile  gps  gps.cpp
C++/Exceptions/: exception.cpp  exceptions  exceptions.cpp  pseudo_serial.hpp
C++/Filesystem/: main.cpp
C++/Gtests_tests_to_test_testing_tests/car_tests/tests/: CMakeLists.txt  test_Battery.cpp
C++/Gtests_tests_to_test_testing_tests/car_tests/tests/mocks/: MockBattery.hpp  MockCurrentSensor.hpp  MockEngine.hpp  MockFuelTank.hpp
C++/Gtests_tests_to_test_testing_tests/car_tests/tests/stubinc/: SensorManager.c  SensorManager.h
C++/Gtests_tests_to_test_testing_tests/simple_maths_tests/: CMakeLists.txt  Makefile  math_exception.hpp  simple_maths.hpp  simple_maths.hpp.gch  test.cpp
C++/IoClass/: Makefile  config.cpp  config.h  debug_utils.hpp  io.cpp  io.h  iocollection.hpp  main.cpp  mock_register.h  mock_registers.cpp  setup.cpp  setup.h  stm32f051xx_io_mapping.h  userIOs.hpp
C++/Override/: override  override.cpp
C++/PugiXml/: CMakeLists.txt
C++/PugiXml/App/: TotoTest.c  TotoTest.h  app.cpp
C++/Random numbers/: Output.txt  Output_mersenne_twister.txt  mersenne_twister.cpp  random_device.cpp
C++/Regular class and inheritance/: class.cpp
C++/ReturnValueOptimization/: test_with_class_members.cpp
C++/Tree/: node.h  tree.cpp
C++/base_class_slices/: slices.cpp
C++/casts/: a.out  preprocessed  static_casting_int_to_uint.cpp
C++/constness/: const.cpp
C++/copyConstructors/: copyconstructor.cpp
C++/deleted_functions/: main  main.cpp
C++/double_free/: double_free  double_free.cpp
C++/enums_to_string_convertion/: convert.cpp
C++/exceptions/: exceptions.cpp  pseudo_serial.hpp
C++/forward_declarations/: Makefile  classA.cpp  classA.hpp  classB.cpp  classB.hpp  forward_declaration  main.cpp
C++/garbage_struct_init/: garbage_struct_init  garbage_struct_init.cpp
C++/global_vars_in_headers/: global_vars_in_headers  globals.hpp  globals_in_monolithic_header.hpp  main.cpp  utils.cpp  utils.hpp
C++/inheritance_diamond/: AbstractA.hpp  AbstractB.hpp  AbstractC.hpp  diamond.cpp
C++/inplace_new/: main  main.cpp
C++/instance returned by static/: classA.hpp  main.cpp
C++/jsonTest/: CMakeLists.txt  jsonTest.cpp
C++/logger_macro_expansion/: .gitignore  log_expansion.cpp
C++/macros/: macrotest.cpp
C++/memory_corruption/: std_set_corruption  std_set_corruption.cxx
C++/memory_leak/: memory_leak  memory_leak.cpp
C++/miscellaneous/: Chaining_classes_within_a_Pipeline.cpp  TestPingClassAetB.cpp  map_access.cpp  static_members_auto_init  static_members_auto_init.cpp
C++/multi-threading/: Makefile  multi-threading  multi-threading.cpp
C++/nested_class/: nested.cpp
C++/operator_overloading/: operator_overloading  operator_overloading.cpp
C++/parallel_with_omp/: Makefile  parallel_for  parallel_for.cxx
C++/reference_polymorphism/: exception.cpp
C++/references and pointers/: main.cpp
C++/shared_libraries/: Makefile  main  main.cpp  main_gcc5_shared_gcc7  main_gcc7_shared_gcc5  shared.cpp  shared.hpp
C++/static_init/: static_init.cpp
C++/templates/: pseudo_vector.hpp  templates  templates.cpp
C++/type_traits/: main  main.cpp
C++/variable_shadowing/: shadow.cpp
C/BufferExtraction/: Makefile  test.c
C/Pragma warnings/: pragma.c
C/arrays/: .gitignore  Makefile  matrix_copy.c
C/bitmaps_characters/: Makefile  printer.c
C/enums_to_string_convertion/: convert.c
C/maths_libs/: maths.c  maths.h  maths_tests  maths_tests.c
C/nested_bitfields/: nested_bitfields  nested_bitfields.c
C/nested_structures/: main  main.c
C/static_asserts/: main.c
(+85 files in other folders)
